# Xframe

./: .env.example  .gitignore  ARRANCAR.md  DESPLIEGUE-COMPARTIDO.md  DESPLIEGUE.md  FIGMA_COVERAGE.md  components.json  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.cjs  vercel.json  vite.config.mjs
.claude/: launch.json
Landing page/: lovable_dev_dashboard_resources_1440w_default.h2d  lovable_dev_es_pricing_1440w_default (1).h2d  lovable_dev_es_pricing_1440w_default.h2d  lovable_dev_projects_77199122-f79d-49b5-b6b4-c3d86b6565da_1440w_default.h2d  lovable_dev_projects_77199122-f79d-49b5-b6b4-c3d86b6565da_settings_account_1440w_default.h2d  lovable_dev_projects_77199122-f79d-49b5-b6b4-c3d86b6565da_settings_apps_1440w_default.h2d  lovable_dev_projects_77199122-f79d-49b5-b6b4-c3d86b6565da_settings_billing_1440w_default.h2d  lovable_dev_projects_77199122-f79d-49b5-b6b4-c3d86b6565da_settings_knowledge_1440w_default.h2d  (+6 more)
backend/: .env.example  Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.shared.yml  docker-compose.yml  pyproject.toml  run_api.py
backend/app/: config.py  db.py  llm.py  main.py  mcp_api.py  mcp_server.py  runtime.py  storage.py
backend/app/agent/: compaction.py  executables.py  graph.py  metering.py  runner.py  state.py
backend/app/agent/prompts/: base.py
backend/app/artifacts/: __init__.py  manager.py  types.py
backend/app/assembly/: __init__.py  ffmpeg.py  probe.py
backend/app/auth/: __init__.py  _redis.py  ownership.py  ratelimit.py  supabase.py  tickets.py
backend/app/context/: manager.py  prompts.py  types.py
backend/app/jobs/: __main__.py  credits.py  download.py  fanout.py  queue.py  resume.py  webhooks.py  worker.py
backend/app/memory/: collector.py  onboarding.py  prompts.py  store.py
backend/app/production/: __init__.py  audio.py  lipsync.py  quality.py  transitions.py  types.py
backend/app/providers/: _http.py  base.py  elevenlabs.py  flux.py  hailuo.py  higgsfield.py  kling.py  openai_image.py  registry.py  seed.py  seedance.py  sora.py  sync_labs.py  veo.py  wan.py
backend/app/stream/: bus.py
backend/app/taxonomy/: __init__.py  builder.py  repo.py
backend/app/tools/: __init__.py  base.py  brief.py  canvas.py  elements.py  errors.py  generation.py  manifests.py  meta.py  production.py  production_crud.py  project.py  quality.py  shots.py
backend/evals/: __init__.py  base.py  conftest.py  datasets.py  eval_continuity.py  eval_script.py  eval_shotlist.py  scorers.py
backend/scripts/: apply_migration.py  smoke_agent.py  smoke_assemble.py  smoke_generate.py
backend/seeds/: taxonomy.sql
backend/tests/: conftest.py  test_assembly.py  test_audio_lipsync_providers.py  test_auth.py  test_context.py  test_context_integrity.py  test_generation_splices.py  test_jobs.py  test_jobs_money.py  test_mcp.py  test_production.py  test_production_context_links.py  test_production_crud_integrity.py  test_providers.py  test_resume.py  test_ssrf.py  test_storage_signing.py  test_token_metering.py  test_tools.py
backend/tests/integration/: conftest.py  test_contracts.py  test_money_e2e.py  test_turn_e2e.py
(+56 files in other folders)
