[project]
name = "xframe-backend"
version = "0.1.0"
description = "Agente de cinematografía generativa de Xframe"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",

    # Agente. langgraph trae el checkpointer de Postgres, que es el que persiste
    # XframeState; langchain-anthropic es el único cliente de LLM que usamos.
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.28",
    "langchain-anthropic>=0.3.0",

    # Infraestructura. asyncpg y no un ORM: el esquema ya está escrito en SQL con RLS.
    "asyncpg>=0.30",
    "redis>=5.2",
    "httpx>=0.28",

    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
]

[project.optional-dependencies]
# Los evals no se instalan en la imagen de producción: arrastran el cliente del juez
# y datasets que no pintan nada en un contenedor de API.
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]


# --------------------------------------------------------------------------- #
# Ruff                                                                         #
# --------------------------------------------------------------------------- #

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "ASYNC",
    "RUF",
]
ignore = [
    "E501",  # el formatter ya parte líneas; avisar dos veces sobra
    "B008",  # Depends() en defaults es el idioma de FastAPI
]

[tool.ruff.lint.per-file-ignores]
# Los prompts de los jueces son literales largos y con formato significativo.
"evals/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"


# --------------------------------------------------------------------------- #
# Pytest                                                                       #
# --------------------------------------------------------------------------- #

[tool.pytest.ini_options]
# `eval_*.py` además de `test_*.py`, como el pytest.ini de PostHog: los evals son
# suites de pytest, pero se descubren con su propio nombre para poder correrlos (o
# no correrlos) por separado. Un eval cuesta dinero y tarda; un test unitario no.
python_files = ["test_*.py", "eval_*.py"]
python_classes = ["Test*", "Eval*"]
python_functions = ["test_*", "eval_*"]

testpaths = ["tests", "evals"]
# `app` y `evals` se importan desde la raíz del backend sin necesidad de instalar el
# paquete: los evals se corren sobre el árbol de trabajo, no sobre un wheel.
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-p no:warnings -ra"

markers = [
    "evals: suite de evaluación. Llama a modelos reales y cuesta dinero; excluida por defecto en CI rápido con -m 'not evals'.",
    "ffmpeg: requiere el binario de ffmpeg/ffprobe instalado.",
]
